<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/huellafondo"
    android:fitsSystemWindows="true">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgPetPhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_my_pets"
                android:layout_marginTop="70dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/edtPetName"
                    android:layout_width="match_parent"
                    android:textColorHint="#D50000"
                    android:textColor="#000000"
                    android:theme="@style/CampoTexto"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pet_name"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D50000"
                android:text="Sexo"/>

            <RadioGroup
                android:id="@+id/rbgSex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <RadioButton android:id="@+id/radio_macho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Macho"/>
                <RadioButton android:id="@+id/radio_hembra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hembra"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D50000"
                android:text="Tipo"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/spnTipo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D50000"
                android:text="Raza"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/spnRaza" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetAge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/edtPetEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#D50000"
                    android:textColor="#000000"
                    android:theme="@style/CampoTexto"
                    android:hint="@string/hint_pet_edad"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D50000"
                android:text="¿Vacunado?"/>

            <RadioGroup
                android:id="@+id/rbgPetVaccionated"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Si"/>
                <RadioButton android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetInformation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/edtPetInformation"
                    android:layout_width="match_parent"
                    android:textColorHint="#D50000"
                    android:textColor="#000000"
                    android:theme="@style/CampoTexto"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pet_information"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSavePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_save"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
       />
</RelativeLayout>